Update Instagram icon to be blue

--- a/src/app/scss/components/_team.scss
+++ b/src/app/scss/components/_team.scss
@@ -73,6 +73,7 @@
       a {
         transform: scale(1) rotate(0deg);
         opacity: 1;
+        color: blue;
       }
     }
     .cs-member_thumb {
