--- a/src/app/scss/components/_team.scss
+++ b/src/app/scss/components/_team.scss
@@ -27,6 +27,17 @@
     svg {
       height: 20px;
       width: 20px;
+      color: blue;
+      transition: all 0.3s ease; // Smooth transition for effects
+  
+      // Shadow for prominence
+      filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.2));
+  
+      &:hover {
+        color: darkblue; // Change color on hover
+        transform: scale(1.1); // Increase size on hover
+        filter: drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.3)); // Enhanced shadow on hover
+      }
     }
   }
   .cs-member_name {
